syntax = "proto3";
package dadtkv;
option csharp_namespace = "Dadtkv";

import "DadIntDto.proto";

service DadtkvService {
  rpc TxSubmit(TxSubmitRequestDto) returns (TxSubmitResponseDto);
  rpc Status(StatusRequestDto) returns (StatusResponseDto);
}

message TxSubmitRequestDto {
  string clientID = 1;
  repeated string readSet = 2;
  repeated DadIntDto writeSet = 3;
}

message TxSubmitResponseDto {
  repeated DadIntDto readSet = 1;
}

message StatusRequestDto {
}

message StatusResponseDto {
  repeated string status = 1;
}
